Change vec_float encoding

--- a/src/vec_float.adoc
+++ b/src/vec_float.adoc
@@ -24,7 +24,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x00, attr: 'funct6'},
 ]}
 ....
 
@@ -44,7 +44,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x00, attr: 'funct6'},
 ]}
 ....
 
@@ -70,7 +70,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x02, attr: 'funct6'},
 ]}
 ....
 
@@ -96,7 +96,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x02, attr: 'funct6'},
 ]}
 ....
 
@@ -122,7 +122,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x27, attr: 'funct6'},
 ]}
 ....
 
@@ -152,7 +152,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x30, attr: 'funct6'},
 ]}
 ....
 
@@ -178,7 +178,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x30, attr: 'funct6'},
 ]}
 ....
 
@@ -204,7 +204,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x32, attr: 'funct6'},
 ]}
 ....
 
@@ -230,7 +230,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x32, attr: 'funct6'},
 ]}
 ....
 
@@ -256,7 +256,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x34, attr: 'funct6'},
 ]}
 ....
 
@@ -271,6 +271,20 @@ Mnemonic::
 --
 	vfwadd.wf vd, vs2, rs1, vm
 --
+
+Encoding::
+[wavedrom, , svg]
+....
+{reg: [
+  {bits: 7, name: 0x57, attr: 'OPFVF'},
+  {bits: 5, name: 'vd', type: 2},
+  {bits: 3, name: 5},
+  {bits: 5, name: 'rs1', type: 4},
+  {bits: 5, name: 'vs2', type: 2},
+  {bits: 1, name: 'vm'},
+  {bits: 6, name: 0x34, attr: 'funct6'},
+]}
+....
 
 Description::
 Widening FP add/subtract, 2*SEW = 2*SEW +/- SEW, vector-scalar
@@ -294,7 +308,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x36, attr: 'funct6'},
 ]}
 ....
 
@@ -309,6 +323,20 @@ Mnemonic::
 --
 	vfwsub.wf vd, vs2, rs1, vm
 --
+
+Encoding::
+[wavedrom, , svg]
+....
+{reg: [
+  {bits: 7, name: 0x57, attr: 'OPFVF'},
+  {bits: 5, name: 'vd', type: 2},
+  {bits: 3, name: 5},
+  {bits: 5, name: 'rs1', type: 4},
+  {bits: 5, name: 'vs2', type: 2},
+  {bits: 1, name: 'vm'},
+  {bits: 6, name: 0x36, attr: 'funct6'},
+]}
+....
 
 Description::
 Widening FP add/subtract, 2*SEW = 2*SEW +/- SEW, vector-scalar
@@ -336,7 +364,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x24, attr: 'funct6'},
 ]}
 ....
 
@@ -362,7 +390,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x24, attr: 'funct6'},
 ]}
 ....
 
@@ -414,7 +442,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x20, attr: 'funct6'},
 ]}
 ....
 
@@ -440,7 +468,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x21, attr: 'funct6'},
 ]}
 ....
 
@@ -470,7 +498,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x38, attr: 'funct6'},
 ]}
 ....
 
@@ -496,7 +524,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x38, attr: 'funct6'},
 ]}
 ....
 
@@ -526,7 +554,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2c, attr: 'funct6'},
 ]}
 ....
 
@@ -552,7 +580,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2c, attr: 'funct6'},
 ]}
 ....
 
@@ -578,7 +606,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2d, attr: 'funct6'},
 ]}
 ....
 
@@ -604,7 +632,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2d, attr: 'funct6'},
 ]}
 ....
 
@@ -630,7 +658,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2e, attr: 'funct6'},
 ]}
 ....
 
@@ -656,7 +684,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2e, attr: 'funct6'},
 ]}
 ....
 
@@ -682,7 +710,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2f, attr: 'funct6'},
 ]}
 ....
 
@@ -708,7 +736,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2f, attr: 'funct6'},
 ]}
 ....
 
@@ -734,7 +762,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x28, attr: 'funct6'},
 ]}
 ....
 
@@ -760,7 +788,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x28, attr: 'funct6'},
 ]}
 ....
 
@@ -786,7 +814,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x29, attr: 'funct6'},
 ]}
 ....
 
@@ -812,7 +840,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x29, attr: 'funct6'},
 ]}
 ....
 
@@ -838,7 +866,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2a, attr: 'funct6'},
 ]}
 ....
 
@@ -864,7 +892,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2a, attr: 'funct6'},
 ]}
 ....
 
@@ -890,7 +918,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2b, attr: 'funct6'},
 ]}
 ....
 
@@ -916,7 +944,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x2b, attr: 'funct6'},
 ]}
 ....
 
@@ -946,7 +974,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x3c, attr: 'funct6'},
 ]}
 ....
 
@@ -972,7 +1000,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x3c, attr: 'funct6'},
 ]}
 ....
 
@@ -998,7 +1026,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x3d, attr: 'funct6'},
 ]}
 ....
 
@@ -1024,7 +1052,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x3d, attr: 'funct6'},
 ]}
 ....
 
@@ -1050,7 +1078,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x3e, attr: 'funct6'},
 ]}
 ....
 
@@ -1076,7 +1104,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x3e, attr: 'funct6'},
 ]}
 ....
 
@@ -1102,7 +1130,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x3f, attr: 'funct6'},
 ]}
 ....
 
@@ -1128,7 +1156,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x3f, attr: 'funct6'},
 ]}
 ....
 
@@ -1155,10 +1183,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x0, attr: 'vfsqrt.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x13, attr: 'funct6'},
 ]}
 ....
 
@@ -1177,6 +1205,20 @@ Mnemonic::
 --
 	vfrsqrt7.v vd, vs2, vm
 --
+
+Encoding::
+[wavedrom, , svg]
+....
+{reg: [
+  {bits: 7, name: 0x57, attr: 'OPFVV'},
+  {bits: 5, name: 'vd / rd', type: 7},
+  {bits: 3, name: 1},
+  {bits: 5, name: 0x4, attr: 'vfrsqrt7.v'},
+  {bits: 5, name: 'vs2', type: 2},
+  {bits: 1, name: 'vm'},
+  {bits: 6, name: 0x13, attr: 'funct6'},
+]}
+....
 
 Description::
 Floating-point reciprocal square-root estimate to 7 bits.
@@ -1204,10 +1246,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x5, attr: 'vfrec7.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x13, attr: 'funct6'},
 ]}
 ....
 
@@ -1234,7 +1276,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x04, attr: 'funct6'},
 ]}
 ....
 
@@ -1260,7 +1302,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x04, attr: 'funct6'},
 ]}
 ....
 
@@ -1286,7 +1328,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x06, attr: 'funct6'},
 ]}
 ....
 
@@ -1312,7 +1354,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x06, attr: 'funct6'},
 ]}
 ....
 
@@ -1342,7 +1384,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x08, attr: 'funct6'},
 ]}
 ....
 
@@ -1368,7 +1410,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x08, attr: 'funct6'},
 ]}
 ....
 
@@ -1394,7 +1436,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x09, attr: 'funct6'},
 ]}
 ....
 
@@ -1420,7 +1462,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x09, attr: 'funct6'},
 ]}
 ....
 
@@ -1446,7 +1488,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x0a, attr: 'funct6'},
 ]}
 ....
 
@@ -1472,7 +1514,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x0a, attr: 'funct6'},
 ]}
 ....
 
@@ -1502,7 +1544,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x18, attr: 'funct6'},
 ]}
 ....
 
@@ -1528,7 +1570,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x18, attr: 'funct6'},
 ]}
 ....
 
@@ -1554,7 +1596,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x1c, attr: 'funct6'},
 ]}
 ....
 
@@ -1580,7 +1622,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x1c, attr: 'funct6'},
 ]}
 ....
 
@@ -1606,7 +1648,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x1b, attr: 'funct6'},
 ]}
 ....
 
@@ -1632,7 +1674,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x1b, attr: 'funct6'},
 ]}
 ....
 
@@ -1658,7 +1700,7 @@ Encoding::
   {bits: 5, name: 'vs1', type: 2},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x19, attr: 'funct6'},
 ]}
 ....
 
@@ -1684,7 +1726,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x19, attr: 'funct6'},
 ]}
 ....
 
@@ -1710,7 +1752,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x1d, attr: 'funct6'},
 ]}
 ....
 
@@ -1736,7 +1778,7 @@ Encoding::
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x1d, attr: 'funct6'},
 ]}
 ....
 
@@ -1763,10 +1805,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x10, attr: 'vfclass.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x13, attr: 'funct6'},
 ]}
 ....
 
@@ -1795,8 +1837,8 @@ Encoding::
   {bits: 3, name: 5},
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
-  {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 1, name: 0, attr: 'vm'},
+  {bits: 6, name: 0x17, attr: 'funct6'},
 ]}
 ....
 
@@ -1823,8 +1865,8 @@ Encoding::
   {bits: 3, name: 5},
   {bits: 5, name: 'rs1', type: 4},
   {bits: 5, name: 'vs2', type: 2},
-  {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 1, name: 1, attr: 'vm'},
+  {bits: 6, name: 0x17, attr: 'funct6'},
 ]}
 ....
 
@@ -1852,10 +1894,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x0, attr: 'vfcvt.xu.f.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -1875,10 +1917,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x0, attr: 'vfcvt.x.f.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -1901,10 +1943,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x6, attr: 'vfcvt.rtz.xu.f.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -1927,10 +1969,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x7, attr: 'vfcvt.rtz.x.f.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -1953,10 +1995,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x2, attr: 'vfcvt.f.xu.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -1979,10 +2021,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x3, attr: 'vfcvt.f.x.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2007,10 +2049,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x8, attr: 'vfwcvt.xu.f.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2033,10 +2075,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x9, attr: 'vfwcvt.x.f.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2059,10 +2101,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0xe, attr: 'vfwcvt.rtz.xu.f.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2085,10 +2127,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0xf, attr: 'vfwcvt.rtz.x.f.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2111,10 +2153,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0xa, attr: 'vfwcvt.f.xu.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2137,10 +2179,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0xb, attr: 'vfwcvt.f.x.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2163,10 +2205,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0xc, attr: 'vfwcvt.f.f.v'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2193,10 +2235,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x10, attr: 'vfncvt.xu.f.w'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2219,10 +2261,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x11, attr: 'vfncvt.x.f.w'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2245,10 +2287,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x16, attr: 'vfncvt.rtz.xu.f.w'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2271,10 +2313,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x17, attr: 'vfncvt.rtz.x.f.w'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2297,10 +2339,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x12, attr: 'vfncvt.f.xu.w'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2323,10 +2365,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x13, attr: 'vfncvt.f.x.w'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2349,10 +2391,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x14, attr: 'vfncvt.f.f.w'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
@@ -2375,10 +2417,10 @@ Encoding::
   {bits: 7, name: 0x57, attr: 'OPFVV'},
   {bits: 5, name: 'vd / rd', type: 7},
   {bits: 3, name: 1},
-  {bits: 5, name: 'vs1', type: 2},
+  {bits: 5, name: 0x15, attr: 'vfncvt.rod.f.f.w'},
   {bits: 5, name: 'vs2', type: 2},
   {bits: 1, name: 'vm'},
-  {bits: 6, name: 'funct6'},
+  {bits: 6, name: 0x12, attr: 'funct6'},
 ]}
 ....
 
