--- a/src/vec_config.adoc
+++ b/src/vec_config.adoc
@@ -32,7 +32,8 @@ Encoding::
 Description::
 rd = new vl, rs1 = AVL, vtypei = new vtype setting
 
-
+Spike Implementation::
+https://github.com/riscv-software-src/riscv-isa-sim/blob/master/riscv/insns/vsetvli.h[]
 
 === vsetivli
 
@@ -58,6 +59,9 @@ Encoding::
 Description::
 rd = new vl, uimm = AVL, vtypei = new vtype setting
 
+Spike Implementation::
+https://github.com/riscv-software-src/riscv-isa-sim/blob/master/riscv/insns/vsetivli.h[]
+
 
 === vsetvl
 
@@ -82,3 +86,58 @@ Encoding::
 
 Description::
 rd = new vl, rs1 = AVL, rs2 = new vtype value
+
+Spike Implementation::
+https://github.com/riscv-software-src/riscv-isa-sim/blob/master/riscv/insns/vsetvl.h[]
+
+
+=== vsetvl intrinsic
+
+Intrinsics::
+[source,cpp]
+--
+size_t __riscv_vsetvl_e8mf8 (size_t avl);
+size_t __riscv_vsetvl_e8mf4 (size_t avl);
+size_t __riscv_vsetvl_e8mf2 (size_t avl);
+size_t __riscv_vsetvl_e8m1 (size_t avl);
+size_t __riscv_vsetvl_e8m2 (size_t avl);
+size_t __riscv_vsetvl_e8m4 (size_t avl);
+size_t __riscv_vsetvl_e8m8 (size_t avl);
+size_t __riscv_vsetvl_e16mf4 (size_t avl);
+size_t __riscv_vsetvl_e16mf2 (size_t avl);
+size_t __riscv_vsetvl_e16m1 (size_t avl);
+size_t __riscv_vsetvl_e16m2 (size_t avl);
+size_t __riscv_vsetvl_e16m4 (size_t avl);
+size_t __riscv_vsetvl_e16m8 (size_t avl);
+size_t __riscv_vsetvl_e32mf2 (size_t avl);
+size_t __riscv_vsetvl_e32m1 (size_t avl);
+size_t __riscv_vsetvl_e32m2 (size_t avl);
+size_t __riscv_vsetvl_e32m4 (size_t avl);
+size_t __riscv_vsetvl_e32m8 (size_t avl);
+size_t __riscv_vsetvl_e64m1 (size_t avl);
+size_t __riscv_vsetvl_e64m2 (size_t avl);
+size_t __riscv_vsetvl_e64m4 (size_t avl);
+size_t __riscv_vsetvl_e64m8 (size_t avl);
+size_t __riscv_vsetvlmax_e8mf8 ();
+size_t __riscv_vsetvlmax_e8mf4 ();
+size_t __riscv_vsetvlmax_e8mf2 ();
+size_t __riscv_vsetvlmax_e8m1 ();
+size_t __riscv_vsetvlmax_e8m2 ();
+size_t __riscv_vsetvlmax_e8m4 ();
+size_t __riscv_vsetvlmax_e8m8 ();
+size_t __riscv_vsetvlmax_e16mf4 ();
+size_t __riscv_vsetvlmax_e16mf2 ();
+size_t __riscv_vsetvlmax_e16m1 ();
+size_t __riscv_vsetvlmax_e16m2 ();
+size_t __riscv_vsetvlmax_e16m4 ();
+size_t __riscv_vsetvlmax_e16m8 ();
+size_t __riscv_vsetvlmax_e32mf2 ();
+size_t __riscv_vsetvlmax_e32m1 ();
+size_t __riscv_vsetvlmax_e32m2 ();
+size_t __riscv_vsetvlmax_e32m4 ();
+size_t __riscv_vsetvlmax_e32m8 ();
+size_t __riscv_vsetvlmax_e64m1 ();
+size_t __riscv_vsetvlmax_e64m2 ();
+size_t __riscv_vsetvlmax_e64m4 ();
+size_t __riscv_vsetvlmax_e64m8 ();
+--
