--- a/src/vec_perm.adoc
+++ b/src/vec_perm.adoc
@@ -66,6 +66,8 @@ Spike Implementation::
 https://github.com/riscv-software-src/riscv-isa-sim/blob/master/riscv/insns/vmv_s_x.h[]
 
 Intrinsics::
+[%collapsible]
+====
 [source,cpp]
 --
 vint8mf8_t __riscv_vmv_s_x_i8mf8 (int8_t src, size_t vl);
@@ -113,6 +115,7 @@ vuint64m2_t __riscv_vmv_s_x_u64m2 (uint64_t src, size_t vl);
 vuint64m4_t __riscv_vmv_s_x_u64m4 (uint64_t src, size_t vl);
 vuint64m8_t __riscv_vmv_s_x_u64m8 (uint64_t src, size_t vl);
 --
+====
 
 == Floating-Point Scalar Move Instructions
 
